# userdic-py

./: .gitignore  Makefile  README.md  pyproject.toml  userdic.py
scripts/: make_install.py  make_uninstall.py
tests/: test_converter.py  test_dctx_msime_multiline.py  test_make_install.py
userdic_py/: __init__.py  converter.py  hinshi  hinshi.py  normkana.py
