[project]
name = "userdic-py"
version = "0.1.0"
description = "Python port of userdic-ng"
requires-python = ">=3.9"

[project.scripts]
userdic-py = "userdic_py.converter:run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
userdic_py = ["hinshi"]
